<resources>
    <string name="app_name">unsplash</string>
    <string name="random_photo">Random photo</string>
    <string name="random">Random</string>
    <string name="search">Search</string>
    <string name="photo">Photo</string>
    <string name="searched_pictures_will_be_shown_here">Searched pictures will be shown here</string>
    <string name="nothing_found">Nothing found</string>
    <string name="picture">Picture</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="description">Description</string>
    <string name="description_colon">Description:</string>
    <string name="image_link">Image link</string>
    <string name="value_pixels">%s px</string>
    <string name="placeholder">Placeholder</string>
    <string name="bad_network">Failed to connect</string>
    <string name="collections">Collections</string>
    <string name="reload">Reload</string>
    <string name="load">Load</string>
    <string name="image_list_tag">ImageListFrag</string>
    <string name="collections_image_list_tag">CollectionsImageListFrag</string>
    <string name="collections_title">Collection: %s</string>
</resources>